<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SIV</string>

    <!-- Value List -->
    <string name="vlist_flick_type_right">Left-&gt;Right</string>
    <string name="vlist_flick_type_left">Right-&gt;Left</string>

    <string name="vlist_pos_type_right">Right</string>
    <string name="vlist_pos_type_left">Left</string>

    <string name="vlist_list_show_types_index">Index</string>
    <string name="vlist_list_show_types_all">All</string>

    <string name="vlist_storage_types_local">Local</string>
    <string name="vlist_storage_types_drive">Google Drive</string>

    <string name="vlist_list_cache_types_all">All</string>
    <string name="vlist_list_cache_types_checked">Checked</string>
    <string name="vlist_list_cache_types_incomplete">Incomplete</string>

    <!-- Progress -->
    <string name="progress_start">Start</string>
    <string name="progress_success">Complete</string>
    <string name="progress_error">Error</string>
    <string name="progress_cancel">Cancel</string>

    <!-- Misc -->
    <string name="text_done">done</string>

    <!-- Main Activity -->
    <string name="text_password">Password:</string>
    <string name="text_storage">Storage Type:</string>
    <string name="text_user">User:</string>
    <string name="text_folder">Folder:</string>
    <string name="text_check">Folder Check:</string>
    <string name="text_folder_select">Folder Select</string>

    <string name="fcheck_dir">Check dir</string>
    <string name="fcheck_empty">Folder is not selected</string>
    <string name="fcheck_doing">Checking</string>
    <string name="fcheck_done">OK</string>
    <string name="fcheck_retry">Retry Check</string>

    <string name="info_run_folder_check">Run Folder Check</string>
    <string name="err_password">Bad Password</string>
    <string name="err_bad_scramble">Failed to get scramble info</string>

    <string name="menu_setting">Setting</string>

    <string name="perm_error_title">Permission Error</string>
    <string name="perm_request_account">This application need Get-Account permission.</string>
    <string name="perm_self_account">You select \"Never grant\"\nCheck Application Setting > Permission\n(Choice is reset with permission on/off)</string>

    <!-- Dir Activity -->
    <string name="title_activity_dir">Folder</string>
    <string name="title_activity_dir_edit_fav">Edit Favorite</string>

    <string name="menu_dir_edit">Edit Fav.</string>
    <string name="menu_dir_commit">Commit Fav.</string>
    <string name="menu_cache">Cache</string>

    <string name="menu_cache_sync">Sync</string>
    <string name="menu_cache_check">Check</string>
    <string name="menu_cache_retry">Retry</string>
    <string name="menu_cache_delete">Delete</string>

    <string name="fav_title">Favorite</string>
    <string name="fav_mess">Update Favorite?</string>

    <string name="show_btn">Show</string>
    <string name="cache_dl_running">Click after download done.</string>

    <!-- Cache Activity -->
    <string name="cache_title">Cache</string>
    <string name="cache_stop_mess">Stop download?</string>
    <string name="cache_clear_mess">Clear cache?</string>
    <string name="cache_stop">Stop</string>
    <string name="cache_restart">Restart</string>

    <string name="cache_direct_title">Delete</string>
    <string name="cache_direct_clear_mess">Delete folder?</string>

    <string name="rename_title">Rename folder name</string>
    <string name="rename_same">Input new name.</string>
    <string name="rename_exist">New name already exist.</string>

    <!-- Show Activity -->
    <string name="title_activity_show">Show</string>

    <string name="err_empty">No Data</string>

    <string name="menu_start">Start show</string>
    <string name="menu_stop">Stop show</string>
    <string name="menu_open_list">Open List</string>
    <string name="menu_close_list">Close List</string>
    <string name="menu_open_text">Open Text</string>
    <string name="menu_close_text">Close Text</string>
    <string name="menu_rotate">Rotate</string>

    <!-- Settings Activity -->
    <string name="title_activity_settings">Settings</string>

    <string name="pref_timer">Slide Timer (milli sec)</string>

    <string name="pref_header_navi">Navigation</string>
    <string name="pref_flick_navi_next">Flick Next</string>
    <string name="pref_navi_next">Next</string>
    <string name="pref_navi_percent">Navigation Area(%)</string>

    <string name="pref_header_side">Side List</string>
    <string name="pref_side_pos">Position</string>

    <string name="pref_err_timer">Enter a value of 1000 or more</string>
    <string name="pref_err_navi_percent">Enter a value from 5 to 40</string>
</resources>