<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_start"
        android:icon="@android:drawable/ic_media_play"
        android:title="@string/menu_start"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_stop"
        android:icon="@android:drawable/ic_media_pause"
        android:title="@string/menu_stop"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_open_list"
        android:icon="@drawable/ic_folder_24px"
        android:title="@string/menu_open_list"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_close_list"
        android:icon="@drawable/ic_folder_open_24px"
        android:title="@string/menu_close_list"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_open_text"
        android:icon="@drawable/ic_subtitles_off_24px"
        android:title="@string/menu_open_text"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_close_text"
        android:icon="@drawable/ic_article_18dp"
        android:title="@string/menu_close_text"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_rotate"
        android:icon="@android:drawable/ic_menu_always_landscape_portrait"
        android:title="@string/menu_rotate"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_setting"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/menu_setting"
        app:showAsAction="ifRoom" />
</menu>