<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_dir_edit"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/menu_dir_edit"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_dir_commit"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/menu_dir_commit"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_setting"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/menu_setting"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_cache"
        android:icon="@android:drawable/stat_sys_download"
        android:title="@string/menu_cache"
        app:showAsAction="ifRoom" />
</menu>